# baribudos-studio

./: .gitignore  Baribudos_Studio_TREE.txt  OFFICIAL_STUDIO_WEBSITE_CONTRACT.txt  PROJECT_TREE.txt  README.md  REPOSITORY_TREE_REFERENCE.txt  package.json  requirements.txt
.github/: pull_request_template.md
client/mobile-app/src-tauri/: Cargo.toml  tauri.conf.json
client/mobile-app/src-tauri/src/: main.rs
data/: saga_visual_sets.json
deploy/: .env.example  FINAL-STATUS.md  GAP-MAP.md  ONLINE-BUILDS.md  POST-BUILD-CHECKLIST.md  PRODUCTION-CHECKLIST.md  README-DEPLOY.md  RELEASE-V1.md  RUNBOOK-PC.md  build-android.bat  build-android.sh  build-frontend.bat  build-frontend.sh  build_android.py  build_desktop.py  check_runtime.py  init-tauri.bat  init-tauri.sh  release_check.py  release_manifest.json  run-smoke-test.bat  run-smoke-test.sh  smoke_test.py  start-all.bat  start-all.sh  start-backend.bat  start-backend.py  start-backend.sh  version.json  version.remote.example.json  version.remote.json
docs/: ACCESS_AND_ROLES.md  CHANNEL_OUTPUTS_MODEL.md  CHANNEL_PREP_MATRIX.md  CI_ARTIFACTS.md  DISTRIBUTION_HUB_PERSISTENCE_MODEL.md  DISTRIBUTION_STATE_MODEL.md  EXTERNAL_CHANNELS_ROADMAP.md  EXTERNAL_INTEGRATION_STEPS.md  FAMILY_PRIVATE_STUDIO_EDITORIAL_OWNERSHIP.md  FINAL_BRANCH_CONSOLIDATION_CHECKLIST.md  FIRST_REVENUE_PLAYBOOK.md  H1_H5_CONSISTENCY_REVIEW_V1.md  H1_PANEL_INTEGRATION_FINAL_STEP.md  H1_PUBLISH_CONFIDENCE_IMPLEMENTATION_V1.md  H1_VISIBLE_COMPLETION_CHECKLIST.md  H2_READINESS_CREDIBILITY_EXECUTION_BUNDLE_V1.md  H2_VISIBLE_COMPLETION_CHECKLIST.md  (+43 more)
(+284 files in other folders)
